--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@
   
 }
 
+.no-scrollbar::-webkit-scrollbar { display: none; }
+.no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+
 :root {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
